# mailfilter

./: .gitignore  README.md  config.py  conftest.py  insert_testdata.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  filters.py  forms.py  models.py  routes.py  services.py
app/static/css/: card.css  style.css
app/static/js/: back_to_top.js  clear_sessionstorage.js  modal.js  reset_form.js  restore_contact_emails_search_conditions.js  restore_job_emails_search_conditions.js  save_contact_emails_search_conditions.js  save_job_emails_search_conditions.js  set_date_placeholder.js  set_delete_button.js  set_selectbox_color.js
app/templates/: _helpers.html  _mail_delete_modal.html  base.html  index.html  list_contact_emails.html  list_job_emails.html  show_contact_email.html  show_job_email.html
app/templates/errors/: 404.html  500.html
migrations/versions/: 12d718328ea3_contact_emailsテーブルとjob_emailsテーブルの作成.py  678e293cb579_add_colomn_njk_memo.py  6c9929ee202b_問い合わせメールと求人関係メールのテーブル作成.py
tests/: conftest.py  mock.py  test_config.py  test_routes.py  test_services.py
util/: convert_datetime.sh
