[project]
name = "mailfilter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cryptography>=44.0.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "types-flask-migrate>=4.0.0.20241204",
    "types-pytz>=2024.2.0.20241003",
]

[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache"
]
line-length = 119
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
